2010-02-18  Karl Berry  <karl@gnu.org>

	* tex4ht-mathplayer.tex: update license notices.
	* tex4ht-mkht.tex: update some license notices, more to come.
	* Makefile: add derivations.

2010-02-17  Karl Berry  <karl@gnu.org>

	* tex4ht-moz.tex: update license notices.
	* Makefile: add derivations.

2010-02-16  Karl Berry  <karl@gnu.org>

	* tex4ht-oo-xtpipes.tex: update license notices.
	* Makefile: add derivations.

2010-02-15  Karl Berry  <karl@gnu.org>

	* tex4ht-ooffice.tex: update license notices.
	* Makefile: add derivations.

2010-02-14  Karl Berry  <karl@gnu.org>

	* tex4ht-ooimpress.tex: update license notices.
	Remove would-be generation of ooimpress-math and ooimpress-mml,
	since it seems they are not actually generated.
	* Makefile: add derivations.

2010-02-13  Karl Berry  <karl@gnu.org>

	* common-code.tex: new file.
	* tex4ht-unicode.tex: use it.
	
	* tex4ht-options.tex: update license notices.
	* Makefile: add derivations.	

2010-02-12  Karl Berry  <karl@gnu.org>

	* tex4ht-sty.tex: update license notices.
	* Makefile: add derivations.

2010-02-11  Karl Berry  <karl@gnu.org>

	* tex4ht-svg.tex: update license notices.
	* Makefile: add derivations.

	* All files so far: Put current (2010) copyright line first.

2010-02-10  Karl Berry  <karl@gnu.org>

	* tex4ht-t4ht.tex: update license notices.
	* Makefile: add derivations.

2010-02-09  Karl Berry  <karl@gnu.org>

	* tex4t-tei.tex: update license notices.
	* Makefile: add derivations.
	* tex4ht-cpright.tex: new macro |TeX4ht copywrite,
	to output the license notice with a \write to the log file.

2010-02-08  Karl Berry  <karl@gnu.org>

	* tex4ht-unicode.tex: update license notices.
	* Makefile: add derivations.

2010-02-07  Karl Berry  <karl@gnu.org>

	* tex4ht-word.tex: update license notices.
	* Makefile: add derivations.

2010-02-06  Karl Berry  <karl@gnu.org>

	* tex4ht-xhtml-xtpipes.tex: update license notices.
	* Makefile: add derivations.

	* tex4ht-xhtmml-xtpipes.tex,